# AutoShell

./: CMakeLists.txt  LICENSE  README.md  categorymanager.cpp  categorymanager.h  commands.cpp  commands.h  databasehandler.cpp  databasehandler.h  dbconnectiondialog.cpp  dbconnectiondialog.h  exportprojectasxml.cpp  exportprojectasxml.h  formattoolbar.cpp  formattoolbar.h  main.cpp  mainwindow.cpp  mainwindow.h  mytreewidget.cpp  mytreewidget.h  nonmodaldialogue.cpp  projectmanager.cpp  projectmanager.h  projectpanel.cpp  projectpanel.h  resources.qrc  richheaderview.cpp  richheaderview.h  richtextdelegate.cpp  richtextdelegate.h  tablemanager.cpp  tablemanager.h  templatemanager.cpp  templatemanager.h  templatepanel.cpp  templatepanel.h  treecategorypanel.cpp  treecategorypanel.h
.github/workflows/: CI.yml
db/: schema.sql
